# sms

./: Cargo.toml  LICENSE  README.MD  dbdiagram  diesel.toml
.cargo/: config.toml
db/: Cargo.toml
db/src/: conn.rs  lib.rs  schema.rs
db/src/models/: brand.rs  campus.rs  class.rs  custom_type.rs  mod.rs  people.rs  student.rs  student_class.rs
db/src/services/: mod.rs  svc_brand.rs  svc_campus.rs  svc_class.rs  svc_people.rs  svc_student.rs  svc_student_class.rs
db/tests/: brand_test.rs  campus_test.rs  people_test.rs  seed_test.rs  student_class_test.rs  student_test.rs
db/tests/brand/: insert.rs
db/tests/campus/: insert.rs  select.rs
db/tests/class/: insert.rs
db/tests/people/: insert.rs
db/tests/student/: insert.rs  select.rs
db/tests/student_class/: insert.rs
migrations/2023-08-26-091127_create_peoples/: down.sql  up.sql
migrations/2023-08-27-114339_create_brands/: down.sql  up.sql
migrations/2023-08-27-114442_create_campuses/: down.sql  up.sql
migrations/2023-08-28-070024_create_classes/: down.sql  up.sql
migrations/2023-08-28-070543_create_students/: up.sql
migrations/2023-08-28-070803_create_student_class/: down.sql  up.sql
