[workspace]
members =["db"]

[workspace.dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
chrono = {version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uuid = {version = "1.4.1", features = ["v4", "serde"]}
anyhow = "1.0.72"
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
deadpool = "0.9.5"
tokio = { version = "1.26.0", features = ["full"] }

rand = "0.8.5"
fake = { version = "2.6.1", features= ["derive", "chrono"] }