[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {workspace = true}
dotenvy = {workspace = true}

chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}
anyhow = {workspace = true}
diesel-async = {workspace = true}
deadpool = {workspace = true}
tokio = {workspace = true}

rand = {workspace = true}
fake = {workspace = true}
